--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,13 +1,22 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>login</ion-title>
-  </ion-toolbar>
-</ion-header>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">login</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="centered-content">
+
+    <div class="title-container">
+      <h1 class="app-title">Skeleton App</h1>
+    </div>
+
+    <div class="login-form-container">
+      <h2>Login</h2>
+      <ion-input class="input-field" label="Usuario" labelPlacement="stacked" placeholder="Ingrese su nombre de usuario"></ion-input>
+      <ion-input class="input-field" label="Contraseña" labelPlacement="stacked" type="password" value="password"></ion-input>
+      <ion-button class="login-button">Ingresar</ion-button>
+    
+    </div>
+
+  </div>
+
+
 </ion-content>
