Crear interfaz home page

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,46 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+    <ion-title>Skeleton App</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div class="welcome-message">
+    Bienvenido, {{nombre}}.
   </div>
+
+  <div class="main-container">
+    <div class="login-form-container">
+      <h3>Información</h3>
+      <ion-input class="input-field" label="Nombre" labelPlacement="stacked" placeholder="Ingrese su nombre"></ion-input>
+      <ion-input class="input-field" label="Apellido" labelPlacement="stacked" placeholder="Ingrese su apellido"></ion-input>
+      <ion-input class="input-field" label="Contraseña" labelPlacement="stacked" type="password" value="password"></ion-input>
+
+      <ion-label position="stacked" class="ion-padding-bottom">Educación</ion-label>
+      <ion-select placeholder="Seleccione nivel" [(ngModel)]="data.educacion">
+        <ion-select-option *ngFor="let niv of niveles" [value]="niv.id">{{niv.nivel}}</ion-select-option>
+      </ion-select>
+
+      <!-- <mat-form-field>
+        <mat-label>Choose a date</mat-label>
+        <input matInput [matDatepicker]="picker">
+        <mat-hint>MM/DD/YYYY</mat-hint>
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>       -->
+  
+      <ion-button class="login-button">Ingresar</ion-button>    
+    </div>
+  </div>
+
+
 </ion-content>
+
+
+
+<ion-footer>
+  <ion-toolbar>
+    App desarrollada por: 
+  </ion-toolbar>
+</ion-footer>
