--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,17 @@
-#container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+.welcome-message {
+  font-size: 25px;
+  padding: 10px;
+  margin-bottom: 25px;
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+.main-container {
+  display: flex;
+  justify-content: center;
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.login-form-container {
+  padding: 25px;
+  width: 90%;
+  border-radius: 20px;
+  border: solid gray;
 }
