--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,6 @@
 .welcome-message {
+  display: flex;
+  justify-content: center;
   font-size: 25px;
   padding: 10px;
   margin-bottom: 25px;
@@ -14,4 +16,8 @@
   width: 90%;
   border-radius: 20px;
   border: solid gray;
+}
+
+.btn-container {
+  margin-top: 25px;
 }
