--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 <ion-content class="ion-padding">
 
   <div class="welcome-message">
-    Bienvenido, {{nombre}}.
+    Bienvenido, {{username}}.
   </div>
 
   <div class="main-container">
