Rediseñar página de login

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -7,10 +7,11 @@
   <div class="centered-content">
     <div class="title-container">
       <h1 class="app-title">Skeleton App</h1>
+      <p class="app-subtitle">Organiza tu biblioteca con facilidad.</p>
     </div>
 
     <div class="login-form-container">
-      <h2>Login</h2>
+      <h2>Iniciar sesión</h2>
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
 
         <ion-input formControlName="username" class="input-field" label="Usuario" labelPlacement="stacked" placeholder="Ingrese su nombre de usuario"></ion-input>
