--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,7 @@
-.welcome-message {
-  display: flex;
-  justify-content: center;
-  font-size: 25px;
-  padding: 10px;
-  margin-bottom: 25px;
+.page-title {
+  font-size: 40px;
 }
 
-.main-container {
-  display: flex;
-  justify-content: center;
-}
-
-.login-form-container {
-  padding: 25px;
-  width: 90%;
-  border-radius: 20px;
-  border: solid gray;
-}
-
-.container-educacion {
-  margin-bottom: 10px;
-}
-
-.btn-container {
-  margin-top: 25px;
+.section-title {
+  font-size: 24px;
 }
