Configurar menú de tabs

--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -1,13 +1,31 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>search</ion-title>
+    <ion-title>Skeleton App</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">search</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+
+  <div class="page-title-container">
+    <h1 class="page-title">Buscar</h1>
+  </div>
+
+  <div class="recently-added-container">
+    <div class="section-title-container">
+      <h2 class="section-title">Agregados recientemente</h2>
+    </div>
+    <div class="section-content-container">
+      Contenido
+    </div>
+  </div>
+
+  <div class="recommended-container">
+    <div class="section-title-container">
+      <h2 class="section-title">Recomendados</h2>
+    </div>
+    <div class="section-content-container">
+      Contenido
+    </div>
+  </div>
+
 </ion-content>
