--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,7 +1,41 @@
 .page-title {
   font-size: 40px;
+  margin-bottom: 0;
 }
 
 .section-title {
-  font-size: 24px;
+  font-size: 22px;
+}
+
+.book-entry-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 7px;
+}
+
+.book-image-container {
+  align-items: center;
+}
+
+.book-image-container img {
+  border-radius: 7px;
+  height: 220px;
+  object-fit: cover;
+  box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+}
+
+.book-ids {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  padding: 2px;
+}
+
+.book-ids p {
+  margin-bottom: 0px;
+  font-size: 12px;
+}
+
+.book-author {
+  color: rgb(105, 105, 105);
 }
