--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -14,7 +14,8 @@
 }
 
 .book-image-container {
-  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .book-image-container img {
@@ -22,6 +23,7 @@
   height: 220px;
   object-fit: cover;
   box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+  align-items: center;
 }
 
 .book-ids {
@@ -32,8 +34,12 @@
 }
 
 .book-ids p {
-  margin-bottom: 0px;
+  line-height: 12px;
   font-size: 12px;
+}
+
+.book-title {
+  margin-top: 10px;
 }
 
 .book-author {
