Cambiar título de aplicación

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -6,7 +6,7 @@
 
   <div class="centered-content">
     <div class="title-container">
-      <h1 class="app-title">Skeleton App</h1>
+      <h1 class="app-title">Bookdive</h1>
       <p class="app-subtitle">Organiza tu biblioteca con facilidad.</p>
     </div>
 
