--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
         <ion-grid>
           <ion-row>
             <ion-col size="6" *ngFor="let book of recentlyAddedBooks">
-              <div class="book-entry-container" (click)="seeBookDetail(book.id)">
+              <div class="book-entry-container" (click)="seeBookDetail(book.isbn)">
                 <div class="book-image-container">
                   <img [src]="book.thumbnail" />
                 </div>
@@ -45,7 +45,7 @@
         <ion-grid>
           <ion-row>
             <ion-col size="6" *ngFor="let book of recommendedBooks">
-              <div class="book-entry-container" (click)="seeBookDetail(book.id)">
+              <div class="book-entry-container" (click)="seeBookDetail(book.isbn)">
                 <div class="book-image-container">
                   <img [src]="book.thumbnail" />
                 </div>
