--- a/src/app/search/search.page.html
+++ b/src/app/search/search.page.html
@@ -18,7 +18,7 @@
     <ion-grid>
       <ion-row>
         <ion-col size="6" *ngFor="let book of searchResults">
-          <div class="book-entry-container" (click)="seeBookDetail(book.id)">
+          <div class="book-entry-container" (click)="seeBookDetail(book.isbn)">
             <div class="book-image-container">
               <img [src]="book.thumbnail" />
             </div>
